changed type from text to password

--- a/public/adminSignup.html
+++ b/public/adminSignup.html
@@ -16,7 +16,7 @@
       <label for="username">Username:</label>
       <input type="text" name="username" required /><br />
       <label for="password">Password: </label>
-      <input type="text" name="password" required /><br />
+      <input type="password" name="password" required /><br />
       <label for="instrument">Instrument:</label>
       <select name="instrument" required>
         <option value="" disabled selected>Select instrument</option>
@@ -29,7 +29,7 @@
         <option value="flute" class="instruments">Flute</option>
         <option value="singer" class="singer">Singer</option></select
       ><br />
-      <button type="submit" id="signupButton" >Signup</button>
+      <button type="submit" id="signupButton">Signup</button>
     </form>
   </body>
 </html>
